--- a/css/style.css
+++ b/css/style.css
@@ -106,17 +106,29 @@ a.hover-reverse:hover, a.hover-reverse:focus, a.hover-reverse:active {
 
 .probootstrap-logo {
   float: left;
-  color: #ffffff;
+  color: gold;
   padding-left: 0px;
-  font-size: 20px;
+  font-size: 45px;
   display: block;
   text-transform: uppercase;
-  font-weight: 900;
-  font-family: "Open Sans", sans-serif;
+  text-decoration: underline;
+  text-decoration-color: gold;
+  text-shadow: 2px 2px #ff0000;
+  font-weight: 500;
+  font-family: 'Righteous', cursive;
 }
 
 .probootstrap-logo:hover, .probootstrap-logo:focus, .probootstrap-logo:active {
-  color: #ffffff;
+  color: goldenrod;
+  padding-left: 0px;
+  font-size: 45px;
+  display: block;
+  text-transform: uppercase;
+  text-decoration: underline;
+  text-decoration-color: goldenrod;
+  text-shadow: 2px 2px #ff0000;
+  font-weight: 500;
+  font-family: 'Righteous', cursive;
 }
 
 @media screen and (max-width: 768px) {
