--- a/css/custom.css
+++ b/css/custom.css
@@ -16,5 +16,15 @@ b {
     text-align: center;
     padding: 35px;
     margin: 10px;
-    
+}
+
+#tag {
+    color: 
+    padding: 10px;
+    margin-left: 70px;
+    text-align: left;
+    text-shadow: 2px 2px black;
+    font-family: 'Righteous', cursive;
+    font-size: 25px;
+    font-weight: 700;
 }
