--- a/css/custom.css
+++ b/css/custom.css
@@ -22,7 +22,7 @@ b {
     color: 
     padding: 10px;
     margin-left: 70px;
-    text-align: left;
+    text-align: center;
     text-shadow: 2px 2px black;
     font-family: 'Righteous', cursive;
     font-size: 25px;
