--- a/css/custom.css
+++ b/css/custom.css
@@ -20,9 +20,10 @@ b {
 
 #tag {
     color: 
-    padding: 10px;
-    margin-left: 70px;
-    text-align: center;
+    padding: 5px;
+    margin: 7px;
+    margin-left: 65px;
+    text-align: left;
     text-shadow: 2px 2px black;
     font-family: 'Righteous', cursive;
     font-size: 25px;
